managed to get logo working and auth working

--- a/angular.json
+++ b/angular.json
@@ -49,9 +49,10 @@
               }
             ],
             "styles": [
-              "src/theme.less",
-              "src/styles.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+                "node_modules/ng-zorro-antd/ng-zorro-antd.min.css",
+                "src/theme.less",
+                "src/styles.scss",
+              
             ],
             "scripts": []
           },
@@ -115,8 +116,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
